fixed autocaching support.  made it so we also show a status while downloading
lots of new messages.

added support for drag and drop.

fixed expunging on backend filteres.

changed the Cached search so that you can now make a custom display filter
for cached and uncached messages.

changed the theme selection menu so that we should see all of (and only) the
available look and feels.

040615 release
--------------
disconnection events now test the entire store to see if the connection
has gone down.

left and right arrows on read message pane now just scrolls left and right.

fixed FilterEditor so that the correct filter is shown. 

messages are now only saved to the sent folder after the send succeeds.

fixed DeleteFilter so it doesn't throw an error on configuration.

fixed forward with attachments so that it no longer tries to treat the 
first attachment as the content of the message.

smtp authentication no longer requires you to enter a password every time.

applying folder filters to a set of messages now shows a status dialog.

unsuccessful open attachment commands now show an error.

right-clicking on the Attachment icon now brings up a menu to open, save
(shift-rightclick), or open with (control-rightclick) the attachment.

optimized loading/displaying of new messages in disconnected imap mode.

fixed opening attachments from preview panel.

added a fastDelete option (enabled by default) which auto-selects the next
message when a delete is requested, instead of waiting for the delete to
complete.

040327 release
--------------

added a configurable spam button.

added a button for using custom headers on an outgoing mail message.

updated printing to use the new jdk 1.4 printing system.  also made 
printing, err, work correctly now.

fixed notifyNewMessagesMain and Node so that they actually work.

running with maildir support (including POP3 with a maildir backend), you
no longer get excess ...subFolder directories on WinXP.
